# Ziplogic-Backend

./: .gitignore  README.md  auth.py  celery_app.py  database.py  pyproject.toml  requirements.txt  requirements_auth.txt  setup_auth.md  simple_api.py  swe_agent.db  websocket_handler.py  workspace_repo.rar
.claude/: settings.local.json
agent/: orchestrated_agent.py  prompts.py
agent/architect/: graph.py  graph_enhanced.py  state.py
agent/architect/prompts/: check_research_already_explored.md  conduct_research_plan_prompt.md  extract_implementation_plan.md  plan_next_step_prompt.md
agent/developer/: graph.py  helpers.py  state.py
agent/developer/prompts/: developing_prompt.md  implement_new_file.md
agent/integrations/: github_integration.py
agent/reviewer/: graph.py  state.py
agent/reviewer/prompts/: find_issues.md  propose_fixes.md
agent/tester/: graph.py  state.py
agent/tester/prompts/: analyze_coverage.md  create_test_plan.md  execute_tests.md  generate_test_cases.md  plan_test_strategy.md  test_research.md
agent/tools/: codemap.py  edit.py  search.py  write.py
agent/utils/: __init__.py  paths.py  rate_limiter.py  retry_logic.py
artifacts/: applied_edits.json  proposed_edits.json
scripts/: setup.py
